--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:21+0000\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:46+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -949,8 +949,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Soll der Inhalt des freigegebenen Ordners wirklich gelöscht werden? Der Inhalt wird unwiderruflich gelöscht und kann nicht wiederhergestellt werden."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Soll das WebGUI (z.B. Spaltenanordnung) wirklich zurückgesetzt werden?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr "Wollen Sie wirklich die UI-Einstellungen auf die Standardwerte zurücksetzen, z.B. die Reihenfolge der Spaltenanordnung?"
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2282,6 +2284,9 @@ msgstr "Papua-Neuguinea"
 msgid "Paraguay"
 msgstr "Paraguay"
 
+msgid "Parent Device"
+msgstr "Übergeordnetes Gerät"
+
 msgid "Parent interface"
 msgstr "Übergeordnete Schnittstelle"
 
@@ -2672,13 +2677,13 @@ msgstr "Benötigt"
 msgid "Reset"
 msgstr "Zurücksetzen"
 
-msgid "Reset WebGUI state"
-msgstr "WebGUI zurücksetzen"
+msgid "Reset UI to defaults"
+msgstr "UI auf Vorgaben zurücksetzen"
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "Das zurücksetzen des WebGUI wird die Standardeinstellungen z.B. Spaltenanordnung wiederherstellen."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr "Setze die UI-Einstellungen auf die Standardwerte zurück, z.B. die Reihenfolge der Spaltenanordnung."
 
 msgid "Resize"
 msgstr "Größe ändern"
