--- a/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Galician (http://www.transifex.com/votdev/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
@@ -943,8 +943,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Confirma que quere retirar o contido do cartafol compartido? Retirarase permanentemente e xa non poderá ser recuperado."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Confirma que quere restabelecer o estado WebGUI, p.ex. a orde das columnas na grella?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2276,6 +2278,9 @@ msgstr "Papúa Nova Guinea"
 msgid "Paraguay"
 msgstr "Paraguai"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "Interface principal"
 
@@ -2666,13 +2671,13 @@ msgstr "Requirido"
 msgid "Reset"
 msgstr "Restabelecer"
 
-msgid "Reset WebGUI state"
-msgstr "Restabelecer o estado de WebGUI"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "Restabelecer o estado da Interface web, restaurará os axustes predeterminados, por exemplo as columnas da grella."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "Axustar tamaño"
