--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-06-24 12:58+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -941,8 +941,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Valóban el szeretnéd távolítani a megosztott mappa tartalmát? Véglegesen eltávolításra kerül és nem állítható vissza."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Valóban vissza szeretnéd állítani a WebGUI állapotot, mint például rács oszlop sorrend?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2274,6 +2276,9 @@ msgstr "Pápua Új-Guinea"
 msgid "Paraguay"
 msgstr "Paraguay"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "Szülő interfész"
 
@@ -2664,13 +2669,13 @@ msgstr "Kötelező"
 msgid "Reset"
 msgstr "Visszaállítás"
 
-msgid "Reset WebGUI state"
-msgstr "WebGUI állapot visszaállítása"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "A WegGUI visszaállításával törlődnek az egyéni rács és oszlop beállítások."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "Átméretezés"
