--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -13,9 +13,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-25 12:17+0000\n"
-"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -945,8 +945,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Sicuro di voler eliminare il contenuto della cartella condivisa? Sarà definitivamente cancellato e non potrà essere recuperato."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Sei sicuro di voler ripristinare lo stato della WebGUI, ad es. l'ordine delle colonne nelle griglie?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2278,6 +2280,9 @@ msgstr "Papua Nuova Guinea"
 msgid "Paraguay"
 msgstr "Paraguai"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "Interfaccia genitore"
 
@@ -2668,13 +2673,13 @@ msgstr "Obbligatorio"
 msgid "Reset"
 msgstr "Reset"
 
-msgid "Reset WebGUI state"
-msgstr "Ripristino stato WebGUI"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "Resetta stato WebGUI ripristinerà i valori predefiniti delle colonne della griglia."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "Ridimensiona"
