--- a/deb/openmediavault/usr/share/openmediavault/locale/ko_KR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ko_KR/openmediavault.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/votdev/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
@@ -942,8 +942,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "공유 폴더 내용을 정말 삭제하시겠습니까? 영구적으로 삭제되며 복구할 수 없습니다."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "그리드 열 순서와 같은 WebGUI 상태를 재설정하시겠습니까?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2275,6 +2277,9 @@ msgstr "파푸아 뉴기니"
 msgid "Paraguay"
 msgstr "파라과이"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "부모 인터페이스"
 
@@ -2665,13 +2670,13 @@ msgstr "요구되는"
 msgid "Reset"
 msgstr "재설정"
 
-msgid "Reset WebGUI state"
-msgstr "웹 사용자 인터페이스 상태를 재설정합니다."
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "웹 사용자 인터페이스 상태를 그리드 열로 된 기본 설정으로 복원합니다."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "크기 조정"
