--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -15,9 +15,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-05-10 05:41+0000\n"
-"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -947,8 +947,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Вы действительно хотите удалить содержимое общей папки? Она будет навсегда удалена, и  не сможет быть восстановлена."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Вы действительно хотите сбросить состояние WebGUI, например, порядок столбцов?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2280,6 +2282,9 @@ msgstr "Папуа-Новая Гвинея"
 msgid "Paraguay"
 msgstr "Парагвай"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "Родительский интерфейс"
 
@@ -2670,13 +2675,13 @@ msgstr "Обязательно"
 msgid "Reset"
 msgstr "Сброс"
 
-msgid "Reset WebGUI state"
-msgstr "Сброс состояния WebGUI"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "Сброс состояния WebGUI, например будут восстановлены настройки сетки столбцов по умолчанию."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "Изменить размер"
