--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-06-14 13:32+0000\n"
-"Last-Translator: zubr139\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -298,7 +298,7 @@ msgid ""
 msgstr "Дозволити клієнтам спробувати зберігати розширені атрибути OS/2."
 
 msgid "Allow clients to resume interrupted uploads and downloads"
-msgstr "Дозволити клієнтам відновити перервані закачування та скачування"
+msgstr "Дозволити клієнтам відновити перервані відвантаження та завантаження"
 
 msgid "Allow new files"
 msgstr "Дозволити нові файли"
@@ -408,7 +408,7 @@ msgid "Authenticate users"
 msgstr "Аутентифікація користувачів"
 
 msgid "Authenticated user ID"
-msgstr ""
+msgstr "Завірений ідентифікатор користувача"
 
 msgid "Authentication"
 msgstr "Аутентифікація"
@@ -570,7 +570,7 @@ msgid "Central African Republic"
 msgstr "Центрально-Африканська Республіка"
 
 msgid "Certain date"
-msgstr ""
+msgstr "Певна дата"
 
 msgid "Certificate"
 msgstr "Cертифікат"
@@ -942,8 +942,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Ви справді бажаєте видалити спільну теку контенту? Вона буде назавжди видалена, і не зможе бути відновлена."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Справді хочете скинути стан WebGUI, наприклад, порядку стовпців?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -1251,7 +1253,7 @@ msgstr "FXP"
 msgid ""
 "FXP allows transfers between two remote servers without any file data going "
 "to the client asking for the transfer."
-msgstr ""
+msgstr "FXP дозволяє передавати дані між двома серверами без запити передачі до клієнта."
 
 msgid "Falkland Islands"
 msgstr "Фолклендські острови"
@@ -2275,6 +2277,9 @@ msgstr "Папуа-Нова Гвінея"
 msgid "Paraguay"
 msgstr "Парагвай"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "Батьківський інтерфейс"
 
@@ -2665,13 +2670,13 @@ msgstr "Вимагається"
 msgid "Reset"
 msgstr "Скинути"
 
-msgid "Reset WebGUI state"
-msgstr "Скинути стан WebGUI"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "Скидання стану WebGUI, наприклад буде відновленно налаштування стовпців сітки типово."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "Зміна розміру"
