--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:39+0000\n"
-"Last-Translator: kochin <kochinc@outlook.com>\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -941,8 +941,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "你真的要移除的共享檔案夾的內容嗎？它將被永久刪除，無法恢復。"
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "你真的要重設 WebGUI 的狀態，例如：欄位順序嗎？"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2274,6 +2276,9 @@ msgstr "巴布亞新幾內亞"
 msgid "Paraguay"
 msgstr "巴拉圭"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "上層介面"
 
@@ -2664,13 +2669,13 @@ msgstr "必要"
 msgid "Reset"
 msgstr "重設"
 
-msgid "Reset WebGUI state"
-msgstr "重設 WebGUI 狀態"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "重設 WebGUI 狀態將恢復預設的設定，例如欄位。"
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "調整大小"
