--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-iscsitarget (3.1) stable; urgency=low
 
+  * Update locales.
   * Adapt to new framework.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 26 Jun 2016 15:11:11 +0200
