--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-26 02:01+0000\n"
-"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -940,8 +940,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "共有フォルダのコンテンツを削除してもよろしいですか？コンテンツは完全に削除され、復元することはできません。"
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "WebGUIの状態をリセットしてもよろしいですか？ 例）グリッド列の順序"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2273,6 +2275,9 @@ msgstr "パプアニューギニア"
 msgid "Paraguay"
 msgstr "パラグアイ"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "親インタフェース"
 
@@ -2663,13 +2668,13 @@ msgstr "必須"
 msgid "Reset"
 msgstr "リセット"
 
-msgid "Reset WebGUI state"
-msgstr "WebGUIの状態をリセット"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "WebGUIの状態をリセットします。例えば、グリッド列の既定の設定を復元します。"
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "リサイズ"
