--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -940,8 +940,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr ""
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "Vill du verkligen återställa WebGUI-tillståndet, t.ex. rutnätkolumnens ordning?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2273,6 +2275,9 @@ msgstr "Papua Nya Guinea"
 msgid "Paraguay"
 msgstr "Paraguay"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr ""
 
@@ -2663,12 +2668,12 @@ msgstr "Krävs"
 msgid "Reset"
 msgstr "Återställ"
 
-msgid "Reset WebGUI state"
-msgstr "Återställ WebGUI-tillståndet"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
 msgstr ""
 
 msgid "Resize"
