--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-29 18:57+0000\n"
-"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
+"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -940,8 +940,10 @@ msgid ""
 "permanently removed and cannot be recovered."
 msgstr "Paylaşılmış klasör içeriğini gerçekten kaldırmak istiyor musunuz? Klasör kalıcı olarak silinecek ve içerik kurtarılamayacaktır."
 
-msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
-msgstr "WebGUI durumunu, örneğin sıralı kolon sıralaması şeklinde, sıfırlamak istediğinize emin misiniz?"
+msgid ""
+"Do you really want to reset the UI settings to their default values, e.g. "
+"the order of the grid columns?"
+msgstr ""
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2273,6 +2275,9 @@ msgstr "Papua Yeni Gine"
 msgid "Paraguay"
 msgstr "Paraguay"
 
+msgid "Parent Device"
+msgstr ""
+
 msgid "Parent interface"
 msgstr "Ana arabirim"
 
@@ -2663,13 +2668,13 @@ msgstr "Gerekli"
 msgid "Reset"
 msgstr "Reset"
 
-msgid "Reset WebGUI state"
-msgstr "WebGUI durumunu sıfırla"
+msgid "Reset UI to defaults"
+msgstr ""
 
 msgid ""
-"Reset WebGUI state will restore default settings of grid columns for "
-"example."
-msgstr "WebGUI durumunu sıfırlamak, örneğin, kolon genişlik ayarlarının varsayılan değerlere geri dönmesine neden olacaktır."
+"Reset the UI settings to their default values, e.g. the order of the grid "
+"columns."
+msgstr ""
 
 msgid "Resize"
 msgstr "Yeniden boyutlandır"
