--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.26) stable; urgency=low
+
+  * Mantis 0001564: Disabled Samba service should disable netbios daemon.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Jul 2016 00:26:57 +0200
+
 openmediavault (3.0.25) stable; urgency=low
 
   * Update locales.
