--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.2.2) stable; urgency=low
+
+  * Mantis 0001566: Fix configuration file issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 05 Jul 2016 16:04:09 +0200
+
 openmediavault-clamav (3.2.1) stable; urgency=low
 
   * Various improvements and bugfixes.
