--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.26) stable; urgency=low
 
   * Various improvements.
   * Mantis 0001564: Disabled Samba service should disable netbios daemon.
+  * Mantis 0001568: Can't start OMV using omv-initsystem.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Jul 2016 00:26:57 +0200
 
